// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartRanking Component Loading data 1`] = `
<div>
  <div
    class="sc-dkPtRN gacyIl"
  >
    <div
      class="sc-bdvvtL heGnFz"
    >
      <div
        class="spinner-border"
      />
    </div>
  </div>
</div>
`;

exports[`ChartRanking Component get data error 1`] = `
<div>
  <div
    class="sc-dkPtRN gacyIl"
  >
    <h2
      class="sc-gsDKAQ ioZYxa"
    >
      Error: Network Error
    </h2>
  </div>
</div>
`;

exports[`ChartRanking Component get data success 1`] = `
<div>
  <div
    class="sc-dkPtRN gacyIl"
  >
    <canvas
      height="150"
      role="img"
      width="300"
    />
  </div>
</div>
`;
